# C0-MIPS-Compiler

./: C0-MIPS-Compiler.cabal  README.md
app/: AST.hs  AssemblyGenerator.hs  ICGenerator.hs  IntermediateCode.hs  Lexer.hs  Lexer.x  Main.hs  Parser.hs  Parser.y  TypeChecking.hs  testParser.hs
